--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -1,21 +1,20 @@
 <html>
   <head>
-    <title>JFrog Docker Lifecycle Training </title>
+    <title>Kubernetes Registry </title>
   </head>
   <body bgcolor=white>
 
     <table border="0" cellpadding="10">
       <tr>
         <td>
-          <img src="images/logo.png">
+          <img src="images/k8s-reg.jpg">
         </td>
         <td>
-          <h1>Welcome Docker Lifecycle Training</h1>
+          <h1>Welcome</h1>
         </td>
       </tr>
     </table>
 
     <p>Be prepare to be amazed!  </p>
-    <p>Instructor: Jainish Shah </p>
   </body>
 </html>
