formatted html page

--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -6,11 +6,11 @@
 
     <table border="0" cellpadding="10">
       <tr>
+        <h1 align="center">Welcome</h1>
+      </tr>
+      <tr>
         <td>
           <img src="images/k8s-reg.jpg">
-        </td>
-        <td>
-          <h1>Welcome</h1>
         </td>
       </tr>
     </table>
