--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -10,11 +10,11 @@
       </tr>
       <tr>
         <td>
-          <img src="images/k8s-reg.jpg">
+          <img src="images/k8s-reg.jpg" align="center">
         </td>
       </tr>
     </table>
 
-    <p>Be prepare to be amazed!  </p>
+    <p align="center">Be prepare to be amazed!  </p>
   </body>
 </html>
