--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -6,13 +6,13 @@
 
     <table border="0" cellpadding="10">
       <tr>
-        <h1 align="center">Welcome</h1>
+        <h1 align="center">IT WORKED! JFROG and MICROSOFT</h1>
       </tr>
       <tr>
           <img src="images/k8s-reg.jpg" align="center">
       </tr>
     </table>
 
-    <p align="center">Be prepare to be amazed!  </p>
+    <p align="center">Be prepared to be amazed!  </p>
   </body>
 </html>
