--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -2,6 +2,48 @@
   <head>
     <title>Kubernetes Registry </title>
   </head>
+  <style>
+    h1 {
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 36px;
+    }
+    h3 {
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 15px;
+    }
+    p {
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 20px;
+    }
+    blockquote {
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+    font-size: 21px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 30px;
+    }
+    pre {
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+    font-size: 13px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 18px;
+    }
+    </style>
   <body bgcolor=white>
 
     <table border="0" cellpadding="10">
@@ -9,10 +51,10 @@
         <h1 align="center">IT WORKED! JFROG and MICROSOFT</h1>
       </tr>
       <tr>
-          <img src="images/k8s-reg.jpg" align="center">
+          <center><img src="images/ready_weekend.png" align="center"></center>
       </tr>
     </table>
 
-    <p align="center">Be prepared to be amazed!  </p>
+    <center><p align="center"><h1>Be prepared to be amazed!</h1></p></center>
   </body>
 </html>
