reverted image back to jfroglogo

--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -51,7 +51,7 @@
         <h1 align="center">IT WORKED! JFROG and MICROSOFT</h1>
       </tr>
       <tr>
-          <center><img src="images/ready_weekend.png" align="center"></center>
+          <center><img src="images/logo.png" align="center"></center>
       </tr>
     </table>
 
