--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -48,7 +48,7 @@
 
     <table border="0" cellpadding="10">
       <tr>
-        <h1 align="center">IT WORKED! JFROG and MICROSOFT</h1>
+        <h1 align="center">IT WORKED! JFROG</h1>
       </tr>
       <tr>
           <center><img src="images/logo.png" align="center"></center>
