Removed  JFrog Lightning Talk

--- a/gradle-example/services/webservice/src/main/webapp/index.html
+++ b/gradle-example/services/webservice/src/main/webapp/index.html
@@ -55,6 +55,6 @@
       </tr>
     </table>
 
-    <center><p align="center"><h1>Be prepared to be amazed at Spinnaker Summit JFrog Lightning Talk!</h1></p></center>
+    <center><p align="center"><h1>Be prepared to be amazed at Spinnaker Summit!</h1></p></center>
   </body>
 </html>
